plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    alias libs.plugins.modDevGradle
    //alias libs.plugins.shadow
    alias libs.plugins.editorconfig
    alias libs.plugins.lombok
}

group = maven_group
// Formats the mod version to include the loader, Minecraft version, and '-SNAPSHOT-<timestamp>' if enabled.
boolean isSnapshot = System.getenv("SNAPSHOT")
version = "${mod_version}" + (isSnapshot ? "-SNAPSHOT" : "")
boolean isCI = System.getenv("CI") != null

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

sourceSets {
    // Include resources generated by data generators.
    main.resources {
        srcDir 'src/generated/resources'
    }

    client {
        // The Java plugin does this for the test source set, replicate that here
        compileClasspath += main.output
        runtimeClasspath += client.output + main.output
    }

    test {
        compileClasspath += main.output
        runtimeClasspath += test.output + main.output
    }
}

configurations {
    // set these as unresolvable so we don't accidentally force all dependents to use them with us
    runtimeOnly.canBeResolved = false
    clientRuntimeOnly.canBeResolved = false

    runtimeClasspath.extendsFrom localRuntime
    clientRuntimeClasspath.extendsFrom clientLocalRuntime

    // The Java plugin does this for the testRuntimeOnly & testImplementation configurations, replicate that here
    clientRuntimeOnly.extendsFrom runtimeOnly
    clientImplementation.extendsFrom implementation
    clientLocalRuntime.extendsFrom localRuntime

    // The Java plugin does this for the testRuntimeOnly & testImplementation configurations, replicate that here
    testRuntimeOnly.extendsFrom runtimeOnly
    testImplementation.extendsFrom implementation
    testLocalRuntime.extendsFrom localRuntime

    renderNurseCfg {
        canBeConsumed = false
    }
}

apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/moddevgradle.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/publishing.gradle"
apply from: "$rootDir/gradle/scripts/formatting.gradle"
apply from: "$rootDir/gradle/scripts/docs.gradle"


tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs << "-Xlint:-removal"
    options.compilerArgs << "-Aquiet=true" // Suppress mixin notes
}

lombok {
    version = "1.18.38"
}

test {
    useJUnitPlatform()

    systemProperty "unit.testing", "true"
}
